[package]
name = "blckpp"
version = "0.0.2"
edition = "2021"
authors = ["Philippe Assis <codephi@gmail.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.4.1", features = ["derive"] }
libc = "0.2.147"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"